# morpheus

./: .dockerignore  .env.coolify.example  .env.example  .gitignore  .pre-commit-config.yaml  AI_VISION.md  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  README.md  RULES.md  SKILLS.md  docker-compose.yml  openai_tools_output.json  pyproject.toml  requirements.txt  test_manifest.py  test_schema.py
api/: apps.py  client.py  exception_handler.py  graphql_permissions.py  graphql_view.py  idempotency.py  permissions.py  rate_limit.py  rest.py  schema.py  tests.py  urls.py  views.py
catalog/: models.py
compose/: loki-config.yaml  otel-collector-config.yaml  vector.yaml
core/: admin.py  apps.py  authentication.py  channels.py  context_processors.py  db_router.py  email.py  embeddings.py  hooks.py  log_formatters.py  models.py  observability.py  request_id.py  schema_introspector.py  sentry.py  tasks.py
customers/: models.py
docs/: MICROSERVICES_ARCHITECTURE.md  OPERATIONS_RUNBOOK.md  PLUGIN_DEVELOPMENT.md  THEME_DEVELOPMENT.md  deploy-coolify.md  deploy-plesk-nginx.md
k8s/: configmap.yaml  deployment-web.yaml  deployment-worker.yaml  hpa-web.yaml  hpa-worker.yaml  ingress.yaml  namespace.yaml  pdb-web.yaml  secret.yaml  service-web.yaml
marketing/: models.py
morph/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
orders/: models.py
payments/: models.py
plugins/: apps.py  base.py  context_processors.py  contributions.py  models.py  (+4 more)
services/sdk_python/: README.md  pyproject.toml
services/sdk_python/morph_sdk/: __init__.py  client.py  errors.py  receipts.py
(+514 files in other folders)
