[project]
name = "morph-sdk"
version = "0.1.0a1"
description = "Python SDK for Morpheus CMS — agent commerce, GraphQL + REST."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
async = ["httpx[http2]>=0.27"]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["morph_sdk"]
